ref :: 반환 형식 변경